update image paths

--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -206,7 +206,7 @@
     "\n",
     "This example will use data from chemical cross linking, EM and comparative models to localize the 5 subunits of the RNA Polymerase III heterodimer and heterotrimer, to a fixed core of the remaining 12 subunits.  \n",
     "\n",
-    "<img src=\"files/images/rnapoliii_scheme.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
+    "<img src=\"images/rnapoliii_scheme.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
     "\n",
     "### The four stages of Integrative Modeling <a name=\"3_The_four_stages_of_Integrative_Modeling\"></a>\n",
     "\n",
@@ -259,60 +259,60 @@
     "> **Electron Density Map**  \n",
     "The electron density map of the entire RNA Poly III complex is at 10 Angstrom resolution.  The raw data file for this is stored in `emd_1804_10A_2010.mrc`.\n",
     "\n",
-    "> <figure><img src=\"files/images/rnapoliii_cryoEM.png\" width=\"300px\" />\n",
+    "> <figure><img src=\"images/rnapoliii_cryoEM.png\" width=\"300px\" />\n",
     "<figcaption>_Electron microscopy density map for yeast RNA Polymerase III at 10 Ang resolution (emd 1804)_</figcaption></figure>\n",
     "    \n",
     "> **Electron Density as Gaussian Mixture Models**  \n",
     "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  Several GMMs has been created for the experimental density map, with different numbers of Gaussians, and are stored in the `*_gmm.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  See below for explanation on how to generate GMM and how to analyse them.\n",
     "\n",
-    "> <figure><img src=\"files/images/rnapoliii_gmm1.png\" width=\"300px\" />\n",
+    "> <figure><img src=\"images/rnapoliii_gmm1.png\" width=\"300px\" />\n",
     "> <figcaption>_The EM data represented as a 50 Gaussian mixture model_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "> <figure><img src=\"files/images/rnapoliii_gmm2.png\" width=\"300px\" />\n",
+    "> <figure><img src=\"images/rnapoliii_gmm2.png\" width=\"300px\" />\n",
     "> <figcaption>_The EM data represented as a 200 Gaussian mixture model_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "> <figure><img src=\"files/images/rnapoliii_gmm3.png\" width=\"300px\" />\n",
+    "> <figure><img src=\"images/rnapoliii_gmm3.png\" width=\"300px\" />\n",
     "> <figcaption>_The EM data represented as a 800 Gaussian mixture model_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "> <figure><img src=\"files/images/rnapoliii_gmm4.png\" width=\"300px\" />\n",
+    "> <figure><img src=\"images/rnapoliii_gmm4.png\" width=\"300px\" />\n",
     "> <figcaption>_The EM data represented as a 3200 Gaussian mixture model_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "> <figure><img src=\"files/images/rnapoliii_gmm5.png\" width=\"300px\" />\n",
+    "> <figure><img src=\"images/rnapoliii_gmm5.png\" width=\"300px\" />\n",
     "> <figcaption>_The EM data represented as a 12797 Gaussian mixture model_</figcaption></figure>\n",
     "\n",
     "\n",
     "**PDB File**  \n",
     "High resolution coordinates for all 17 chains of RNA Pol III are found in `.pdb` files.  \n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_native.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_native.png\" width=\"300px\" />\n",
     "<figcaption>_Native structure of Pol III [5FJA](http://www.rcsb.org/pdb/explore.do?structureId=5FJA)_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_core_homology.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_core_homology.png\" width=\"300px\" />\n",
     "<figcaption>_Homology model of the core of Pol III based on [4C3I](http://www.rcsb.org/pdb/explore.do?structureId=4C3I)_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_C82_homology.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_C82_homology.png\" width=\"300px\" />\n",
     "<figcaption>_Homology model of C82 based on [2XUB](http://www.rcsb.org/pdb/explore.do?structureId=2XUB)_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_C37_C53_homology.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_C37_C53_homology.png\" width=\"300px\" />\n",
     "<figcaption>_Homology models of the C37 C53 heterodimer based on [4C3I](http://www.rcsb.org/pdb/explore.do?structureId=4C3I)_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_C34_homology.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_C34_homology.png\" width=\"300px\" />\n",
     "<figcaption>_Homology model of three domains of C34 based on \n",
     "[2DK8](http://www.rcsb.org/pdb/explore.do?structureId=2DK8), \n",
     "[2DK5](http://www.rcsb.org/pdb/explore.do?structureId=2DK5), \n",
@@ -339,7 +339,7 @@
     "\n",
     "Our RNA Pol III representation employs **spherical beads** of varying sizes and **3D Gaussians** (if the EM data is integrated), which coarsen domains of the complex using several resolution scales simultaneously. Here below we show the representation for the Pol II case, but the same applies to Pol III.\n",
     "\n",
-    "<figure><img src=\"files/images/rnapolii_Multi-scale_representation.png\" width=\"600px\" />\n",
+    "<figure><img src=\"images/rnapolii_Multi-scale_representation.png\" width=\"600px\" />\n",
     "<figcaption>_Multi-scale representation of Rpb1 subunit of RNA Pol II_</figcaption></figure>\n",
     "\n",
     "The **spatial restraints** will be applied to individual resolution scales as appropriate. \n",
@@ -352,17 +352,17 @@
     "In a **rigid body**, all the beads and the Gaussians of a given domain have their relative distances constrained during configurational sampling, while in a **flexible string** the beads and the Gaussians are restrained by the sequence connectivity. \n",
     "\n",
     "\n",
-    "<figure><img src=\"files/images/rnapolii_rb.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapolii_rb.png\" width=\"300px\" />\n",
     "<figcaption>_Rigid Bodies and beads_</figcaption></figure>\n",
     "\n",
     "**super rigid bodies** are sets of rigid bodies and beads that will move together in an additional Monte Carlo move.\n",
     "\n",
-    "<figure><img src=\"files/images/rnapolii_srb.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapolii_srb.png\" width=\"300px\" />\n",
     "<figcaption>_Super Rigid Bodies_</figcaption></figure>\n",
     "\n",
     "**chain_of_super_rigid_bodies** are additional degrees of freedom along the connectivity chain of a subunit. It groups sequence-connected rigid domains and/or beads into overlapping pairs and triplets. Each of these groups will be moved rigidly. This mover helps to sample more efficiently complex topologies, made of several rigid bodies, connected by flexible linkers.\n",
     "\n",
-    "<figure><img src=\"files/images/rnapolii_cosrb.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapolii_cosrb.png\" width=\"300px\" />\n",
     "<figcaption>_Chain of Super Rigid Bodies_</figcaption></figure>\n",
     "\n",
     "\n",
@@ -370,7 +370,7 @@
     "\n",
     "A hierarchy in IMP is a tree that stores information on molecules, residues, atoms, etc., where the resolution of the representation increases as you move further from the root. IMP.pmi was designed to support a specialised multi-state/multi-copy/multi-resolution hierarchy\n",
     "\n",
-    "<figure><img src=\"files/images/rnapolii_hierarchy.png\" width=\"600px\" />\n",
+    "<figure><img src=\"images/rnapolii_hierarchy.png\" width=\"600px\" />\n",
     "<figcaption>_PMI hierarchy_</figcaption></figure>\n",
     "\n",
     "The **States** are used as putative structural and compositional alternatives of the system. \n",
@@ -807,32 +807,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<figure><img src=\"files/images/rnapoliii_representation_total.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_representation_total.png\" width=\"300px\" />\n",
     "<figcaption>_Domain Representation of the whole complex in its final modelled conformation_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_representation_core.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_representation_core.png\" width=\"300px\" />\n",
     "<figcaption>_Domain Representation of the core_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_representation_c31.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_representation_c31.png\" width=\"300px\" />\n",
     "<figcaption>_Domain Representation of C31_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_representation_c34.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_representation_c34.png\" width=\"300px\" />\n",
     "<figcaption>_Domain Representation of C34_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_representation_c53_c37.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_representation_c53_c37.png\" width=\"300px\" />\n",
     "<figcaption>_Domain Representation of C53/C37 heterodimer_</figcaption></figure>\n",
     "\n",
     "---\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_representation_c82.png\" width=\"300px\" />\n",
+    "<figure><img src=\"images/rnapoliii_representation_c82.png\" width=\"300px\" />\n",
     "<figcaption>_Domain Representation of C82_</figcaption></figure>\n"
    ]
   },
@@ -865,7 +865,7 @@
     "\n",
     "The system will look like this after the initial randomization:\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_initial.png\" width=\"600px\" />\n",
+    "<figure><img src=\"images/rnapoliii_initial.png\" width=\"600px\" />\n",
     "<figcaption>_Initial random configuration_</figcaption></figure>"
    ]
   },
@@ -1065,7 +1065,7 @@
     ">\n",
     "> The GMMs are computed using an increasing number of Gaussians. The optimal number of Gaussians is chosen as the one that reproduces the same resolution as the original map.\n",
     ">\n",
-    "> <figure><img src=\"files/images/resolution_analysis.png\" width=\"600px\" />\n",
+    "> <figure><img src=\"images/resolution_analysis.png\" width=\"600px\" />\n",
     "> <figcaption>_Searching for the optimal number of Gaussians. Left. the Fourier Shell Correlation is computed between the experimental map and the GMM (each curve has a different number of components). Right. Resolution against the number of components_</figcaption></figure>"
    ]
   },
@@ -1103,7 +1103,7 @@
     "\n",
     "Replica exchange greatly improves the sampling (see [wikipedia](https://en.wikipedia.org/wiki/Parallel_tempering) for a superficial description).\n",
     "\n",
-    "<figure><img src=\"files/images/rnapoliii_replica_exchange.png\" width=\"600px\" />\n",
+    "<figure><img src=\"images/rnapoliii_replica_exchange.png\" width=\"600px\" />\n",
     "\n",
     "The sampling is performed by executing the macro:\n",
     "\n",
@@ -1145,7 +1145,7 @@
    "source": [
     "> The cryoEM modeling is slightly different. It uses an iterative approach where the model is refined using GMMs with an increasing number of components. At the end of each calculation a seed is generated (see below), and used to start a new modeling run.\n",
     ">\n",
-    "> <figure><img src=\"files/images/rnapoliii_sampling_cryoem.png\" width=\"600px\" />\n",
+    "> <figure><img src=\"images/rnapoliii_sampling_cryoem.png\" width=\"600px\" />\n",
     "> <figcaption>_Iterative refinement based on seeding/increasing the components in the GMM_</figcaption></figure>"
    ]
   },
@@ -1405,7 +1405,7 @@
     "\n",
     "The second plot is a dendrogram, basically showing the distance matrix in a hierarchical way. Each vertical line from the bottom is a model, and the horizontal lines show the RMSD agreement between models. Sometimes the dendrogram can indicate a natural number of clusters, which can help determine the correct threshold to use. \n",
     "\n",
-    "<img src=\"files/images/rnapoliii_rmsd_plot.png\" alt=\"Distance matrix and dendrogram\" width=\"600px\" />\n"
+    "<img src=\"images/rnapoliii_rmsd_plot.png\" alt=\"Distance matrix and dendrogram\" width=\"600px\" />\n"
    ]
   },
   {
@@ -1531,7 +1531,7 @@
    "source": [
     "And compute the the rmsf for all molecules and map the value on the structure. Finally we save the colored coordinates in a rmf file.\n",
     "\n",
-    "<img src=\"files/images/rnapoliii_rmsf.png\" alt=\"Structural uncertainty\" width=\"600px\" />"
+    "<img src=\"images/rnapoliii_rmsf.png\" alt=\"Structural uncertainty\" width=\"600px\" />"
    ]
   },
   {
@@ -1557,7 +1557,7 @@
     "\n",
     "The localization densities can give a qualitative idea of the precision of a cluster. Below we show results from `Cluster-0` in the provided results. The localizations are quite narrow and close to the native solution:\n",
     "\n",
-    "<img src=\"files/images/rnapoliii_density.png\" alt=\"Localization densities\" width=\"600px\" />"
+    "<img src=\"images/rnapoliii_density.png\" alt=\"Localization densities\" width=\"600px\" />"
    ]
   },
   {
@@ -1584,7 +1584,7 @@
    "source": [
     "We can compute the global contact map of the whole complex for the cluster.\n",
     "\n",
-    "<img src=\"files/images/rnapoliii_contact_map.png\" alt=\"Localization densities\" width=\"600px\" />"
+    "<img src=\"images/rnapoliii_contact_map.png\" alt=\"Localization densities\" width=\"600px\" />"
    ]
   },
   {
@@ -1612,28 +1612,28 @@
    "source": [
     "Using the script in `rnapoliii/modeling/results/ensemble.py` you can get the analysis above for the four different ensembles of solutions: XL, XL+cryoEM with 50 gaussians (step 1), XL+cryoEM with 200 gaussians (step 2), XL+cryoEM with 800 gaussians (step 3). In the same directory you can find the files related to this analysis. Here below you can compare the results from the rmsf and localization (volume threshold set to 0.3 on all images)\n",
     "\n",
-    "<img src=\"files/images/rnapoliii_xl_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "<img src=\"images/rnapoliii_xl_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
     "<figcaption>_RMSF of the XL ensemble_</figcaption></figure>\n",
     "\n",
-    "> <img src=\"files/images/rnapoliii_xl_cryoem_1_ensemble.png\" alt=\"Localization densities\" width=\"350px\" />\n",
+    "> <img src=\"images/rnapoliii_xl_cryoem_1_ensemble.png\" alt=\"Localization densities\" width=\"350px\" />\n",
     "> <figcaption>_RMSF of the XL cryoEM step 1 ensemble_</figcaption></figure>\n",
     "\n",
-    "> <img src=\"files/images/rnapoliii_xl_cryoem_2_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "> <img src=\"images/rnapoliii_xl_cryoem_2_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
     "> <figcaption>_RMSF of the XL cryoEM step 2 ensemble_</figcaption></figure>\n",
     "\n",
-    "> <img src=\"files/images/rnapoliii_xl_cryoem_3_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "> <img src=\"images/rnapoliii_xl_cryoem_3_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
     "> <figcaption>_RMSF of the XL cryoEM step 3 ensemble_</figcaption></figure>\n",
     "\n",
-    "<img src=\"files/images/rnapoliii_xl_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"380px\" />\n",
+    "<img src=\"images/rnapoliii_xl_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"380px\" />\n",
     "<figcaption>_Localization of the XL ensemble_</figcaption></figure>\n",
     "\n",
-    "> <img src=\"files/images/rnapoliii_xl_cryoem_1_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "> <img src=\"images/rnapoliii_xl_cryoem_1_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"400px\" />\n",
     "> <figcaption>_Localization of the XL cryoEM step 1 ensemble_</figcaption></figure>\n",
     "\n",
-    "> <img src=\"files/images/rnapoliii_xl_cryoem_2_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "> <img src=\"images/rnapoliii_xl_cryoem_2_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"400px\" />\n",
     "> <figcaption>_Localization of the XL cryoEM step 2 ensemble_</figcaption></figure>\n",
     "\n",
-    "> <img src=\"files/images/rnapoliii_xl_cryoem_3_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"380px\" />\n",
+    "> <img src=\"images/rnapoliii_xl_cryoem_3_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"380px\" />\n",
     "> <figcaption>_Localization of the XL cryoEM step 3 ensemble_</figcaption></figure>"
    ]
   },
