Update to work with latest IMP and Python kernel
sampcon is now part of IMP proper (the IMP.sampcon
module) so use that rather than the bundled scripts.
Rather than requiring the bash kernel, use the Jupyter
! notation to run command line tools.

--- a/rnapoliii/analysis/.template.analysis.ipynb
+++ b/rnapoliii/analysis/.template.analysis.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls imp_tutorial_pol3_xl_cryoem_premodeling/modeling/"
+    "!ls imp_tutorial_pol3_xl_cryoem_premodeling/modeling/"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls imp_tutorial_pol3_xl_cryoem_premodeling/modeling/A_output_3/rmfs/"
+    "!ls imp_tutorial_pol3_xl_cryoem_premodeling/modeling/A_output_3/rmfs/"
    ]
   },
   {
@@ -107,9 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mkdir -p modeling/run1\n",
-    "ln -sf ../../imp_tutorial_pol3_xl_cryoem_premodeling/modeling/A_output_3 \\\n",
-    "       modeling/run1/output"
+    "!mkdir -p modeling/run1\n",
+    "!ln -sf ../../imp_tutorial_pol3_xl_cryoem_premodeling/modeling/A_output_3 \\\n",
+    "        modeling/run1/output"
    ]
   },
   {
@@ -138,8 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python scripts/show_stat.py modeling/run1/output/stat.0.out \\\n",
-    "       |grep -v MonteCarlo | cut -f1 -d\\| | uniq"
+    "!imp_sampcon show_stat modeling/run1/output/stat.0.out \\\n",
+    "        |grep -v MonteCarlo | cut -f1 -d\\| | uniq"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python scripts/select_good_scoring_models.py \\\n",
+    "!imp_sampcon select_good \\\n",
     "    -rd modeling -rp run \\\n",
     "    -sl CrossLinkingMassSpectrometryRestraint_Distance_ \\\n",
     "    -pl ConnectivityRestraint_ABC10alpha \\\n",
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This script creates a directory `filter` and a file,\n",
+    "This script creates a new subdirectory `filter` under the `modeling` directory and a file,\n",
     "`filter/models_scores_ids.txt`, that contains the model index, its run,\n",
     "replicaID, frame ID, scores, and sample ID for each model:"
    ]
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "head filter/model_ids_scores.txt"
+    "!head modeling/filter/model_ids_scores.txt"
    ]
   },
   {
@@ -202,8 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python scripts/plot_score.py \\\n",
-    "    filter/model_ids_scores.txt \\\n",
+    "!imp_sampcon plot_score \\\n",
+    "    modeling/filter/model_ids_scores.txt \\\n",
     "    GaussianEMRestraint_Total"
    ]
   },
@@ -213,8 +213,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python scripts/plot_score.py \\\n",
-    "    filter/model_ids_scores.txt \\\n",
+    "!imp_sampcon plot_score \\\n",
+    "    modeling/filter/model_ids_scores.txt \\\n",
     "    ConnectivityRestraint_ABC10alpha"
    ]
   },
@@ -224,8 +224,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python scripts/plot_score.py \\\n",
-    "    filter/model_ids_scores.txt \\\n",
+    "!imp_sampcon plot_score \\\n",
+    "    modeling/filter/model_ids_scores.txt \\\n",
     "    ExcludedVolumeSphere_None"
    ]
   },
@@ -255,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python scripts/select_good_scoring_models.py \\\n",
+    "!imp_sampcon select_good \\\n",
     "    -rd modeling -rp run \\\n",
     "    -sl CrossLinkingMassSpectrometryRestraint_Distance_ \\\n",
     "        GaussianEMRestraint_Total \\\n",
@@ -266,7 +266,7 @@
     "    -alt 0.9 -50 -50 -aut 1.0 5450 90 \\\n",
     "    -mlt 0.0 0.0 0.0 -mut 30.0 0.0 0.0\n",
     "    \n",
-    "wc -l filter/model_ids_scores.txt"
+    "!wc -l modeling/filter/model_ids_scores.txt"
    ]
   },
   {
@@ -358,14 +358,14 @@
    },
    "outputs": [],
    "source": [
-    "cat <<END > density_ranges.txt\n",
-    "density_custom_ranges={\n",
+    "with open('density_ranges.txt', 'w') as fh:\n",
+    "    fh.write(\"\"\"density_custom_ranges={\n",
     "    'C53':['C53'],\n",
     "    'C37':['C37'],\n",
     "    'C82':['C82'],\n",
     "    'C34':['C34'],\n",
     "    'C31':['C31'] }\n",
-    "END"
+    "\"\"\")"
    ]
   },
   {
@@ -390,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python scripts/select_good_scoring_models.py \\\n",
+    "!imp_sampcon select_good \\\n",
     "    -rd modeling -rp run \\\n",
     "    -sl CrossLinkingMassSpectrometryRestraint_Distance_ \\\n",
     "        GaussianEMRestraint_Total \\\n",
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python scripts/Master_Sampling_Exhaustiveness_Analysis.py \\\n",
+    "!imp_sampcon exhaust \\\n",
     "       -n rnapoliii -p good_scoring_models/ \\\n",
     "       -d density_ranges.txt -m cpu_omp -c 8 \\\n",
     "       -a -g 0.1 -gp"
@@ -522,15 +522,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
