Update text to reflect use of IMP.sampcon module

--- a/rnapoliii/analysis/.template.analysis.ipynb
+++ b/rnapoliii/analysis/.template.analysis.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "First, download `imp_tutorial_pol3_xl_cryoem_premodeling.v1.1.tar.gz` from [Zenodo](https://doi.org/10.5281/zenodo.3523241) and extract it in the same directory (`analysis`) as this notebook. (This should already have been done for you.)\n",
     "\n",
-    "This file contains RMF and stat file outputs for longer Monte Carlo runs using the previously-demonstrated script, with multiple replicas:"
+    "This file contains RMF and stat file outputs for longer Monte Carlo runs using the previously-demonstrated script, with multiple replicas, as shown below (the `!` prefix here runs a shell command, rather than Python):"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scripts for this protocol assume that the outputs are stored in a particular directory structure, i.e. `<top directory>/<run number>/output/`, so we first need to make a symlink to the precalculated outputs:"
+    "The IMP scripts for this protocol assume that the outputs are stored in a particular directory structure, i.e. `<top directory>/<run number>/output/`, so we first need to make a symlink to the precalculated outputs:"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `select_good_scoring_models.py` script filters models based on score and parameter thresholds, i.e. it will examine all of the models from all frames and all replicas, and potentially over multiple runs (although we have only a single run in this case).\n",
+    "Here we will use the [[IMP.sampcon]] module, specifically its command line interface, `imp_sampcon`. This tool has a number of modes (use `imp_sampcon --help` to see more information on them). First we will use `imp_sampcon select_good`, which filters models based on score and parameter thresholds, i.e. it will examine all of the models from all frames and all replicas, and potentially over multiple runs (although we have only a single run in this case).\n",
     "\n",
     "In this script, required flags are:\n",
     " - `-rd`, which specifies the directory containing sampling output folders\n",
@@ -129,7 +129,7 @@
     "The `-mlt` and `-mut` keywords, which are optional, define thresholds for restraints made\n",
     "of multiple components (such as crosslinks).\n",
     "\n",
-    "Note that a list of acceptable stat file keywords can be determined using the `scripts/show_stat.py` script (or by looking at a stat file in a text editor, as they have a very simple format):"
+    "Note that a list of acceptable stat file keywords can be determined using `imp_sampcon show_stat` (or by looking at a stat file in a text editor, as they have a very simple format):"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now use the script `plot_score.py` to plot the distribution of the EM, connectivity\n",
+    "We can now use `imp_sampcon plot_score` to plot the distribution of the EM, connectivity\n",
     "and excluded volume scores from this first set of filtered models to\n",
     "determine a reasonable threshold for accepting or rejecting a model."
    ]
@@ -233,6 +233,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Each of these commands also generates a plot in `.png` format, shown below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"ExcludedVolumeSphere_None.jpg\" width=300px title=\"Connectivity score distribution\" /> <img src=\"ConnectivityRestraint_ABC10alpha.jpg\" width=300px title=\"Connectivity score distribution\" /> <img src=\"GaussianEMRestraint_Total.jpg\" width=300px title=\"EM score distribution\" />"
    ]
   },
@@ -244,7 +251,7 @@
     "\n",
     "Note that currently, the choice of filtering criteria is very subjective. Another approach is to take all models after some statistically-determined \"burn in\" or equilibration period. See https://github.com/salilab/PMI_analysis for a method in development to do just this, and [Chodera, \"A Simple Method for Automated Equilibration Detection in Molecular Simulations\", J Chem Theory Comput **12**, 1799-1805, 2016](https://doi.org/10.1021/acs.jctc.5b00784) for a description of the algorithm.\n",
     "\n",
-    "We rerun `select_good_scoring_models.py` adding the extra keywords and score thresholds. These thresholds return 1671 good scoring models.\n",
+    "We rerun `imp_sampcon select_good` adding the extra keywords and score thresholds. These thresholds return 1671 good scoring models.\n",
     "\n",
     "> In general, we require at least 1000 or more models for assessing sampling exhaustiveness. Our score thresholds were chosen in order to have a reasonable number (1000-20000) models for analysis. If we have too few models, the satisfaction criteria should be relaxed, or more sampling should be performed to find more satisfactory models. Too many models (\\>20,000) will make subsequent processing more computationally intensive; in this case satisfaction criteria can be made stricter, or one can pass a random subset of these models to the sampling convergence protocol."
    ]
@@ -275,7 +282,7 @@
    "source": [
     "# Determining sampling precision, clustering, and computing localization densities {#sampprec}\n",
     "\n",
-    "The `Master_Sampling_Exhaustiveness_Analysis.py` script is used to\n",
+    "The `imp_sampcon exhaust` command is used to\n",
     "calculate the sampling precision of the modeling. During this step,\n",
     "multiple tests for convergence are performed on the two samples\n",
     "determined above, models are clustered, and localization densities are computed."
@@ -483,7 +490,7 @@
    "source": [
     "In this case we see good model convergence (top left), similar score distributions (top right), well behaved statistics giving a sampling precision of 9 Å (bottom left), and one dominant cluster (bottom right).\n",
     "\n",
-    "> In some cases our sampling may not converge even with longer sampling runs. This may be an indication of sample heterogeneity, requiring multi-state modeling. For example, if the sample contains a complex in both open and closed forms, or with multiple compositions then it may not be possible to build a single model that represents both forms. See [Molnar *et al.* \"Cys-Scanning Disulfide Crosslinking and Bayesian Modeling Probe the Transmembrane Signaling Mechanism of the Histidine Kinase, PhoQ.\" Structure **22**, 1239-1251, 2014](https://www.ncbi.nlm.nih.gov/pubmed/25087511) or [Shi *et al.* \"A strategy for dissecting the architectures of native macromolecular assemblies.\" Nat Methods **12**, 1135-8, 2015](https://www.ncbi.nlm.nih.gov/pubmed/26436480) for examples."
+    "> In some cases our sampling may not converge even with longer sampling runs. This may be an indication of sample heterogeneity, requiring multi-state modeling. For example, if the sample contains a complex in both open and closed forms, or with multiple compositions, then it may not be possible to build a single model that represents both forms. See [Molnar *et al.* \"Cys-Scanning Disulfide Crosslinking and Bayesian Modeling Probe the Transmembrane Signaling Mechanism of the Histidine Kinase, PhoQ.\" Structure **22**, 1239-1251, 2014](https://www.ncbi.nlm.nih.gov/pubmed/25087511) or [Shi *et al.* \"A strategy for dissecting the architectures of native macromolecular assemblies.\" Nat Methods **12**, 1135-8, 2015](https://www.ncbi.nlm.nih.gov/pubmed/26436480) for examples."
    ]
   },
   {
@@ -536,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
