Fix IMP.sampcon link

--- a/rnapoliii/analysis/analysis.ipynb
+++ b/rnapoliii/analysis/analysis.ipynb
@@ -128,7 +128,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Here we will use the [[IMP.sampcon]] module, specifically its command line interface, `imp_sampcon`. This tool has a number of modes (use `imp_sampcon --help` to see more information on them). First we will use `imp_sampcon select_good`, which filters models based on score and parameter thresholds, i.e. it will examine all of the models from all frames and all replicas, and potentially over multiple runs (although we have only a single run in this case).\n",
+        "Here we will use the [IMP.sampcon](https://integrativemodeling.org/nightly/doc/ref/namespaceIMP_1_1sampcon.html) module, specifically its command line interface, `imp_sampcon`. This tool has a number of modes (use `imp_sampcon --help` to see more information on them). First we will use `imp_sampcon select_good`, which filters models based on score and parameter thresholds, i.e. it will examine all of the models from all frames and all replicas, and potentially over multiple runs (although we have only a single run in this case).\n",
         "\n",
         "In this script, required flags are:\n",
         " - `-rd`, which specifies the directory containing sampling output folders\n",
