--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "### Integrating EM and Crosslinking data to localize five subunits of RNA Polymerase III\n",
     "\n",
-    "Authors: Riccardo Pellarin, Max Bonomi, Charles Greenberg, Daniel Saltsberg, Jan Kosinski, Ben Webb\n",
+    "Authors: Riccardo Pellarin, Max Bonomi, Charles Greenberg, Daniel Saltzberg, Jan Kosinski, Ben Webb\n",
     "\n",
     " - Institut Pasteur, CNRS, C3BI\n",
     " - UCSF, Department of Bioengineering and Therapeutic Sciences"
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will illustrate the use of IMP.pmi by determining the localization of two\n",
+    "We will illustrate the use of IMP.pmi by determining the localization of five\n",
     "subunits of RNA Polymerase III. In the first part we will be utilizing chemical cross-linking coupled with\n",
     "mass spectrometry (XLMS) combined with comparative models of all subunits. In the second part we will also include cryo-electron microscopy (cryoEM). We will try\n",
     "to determine the architecture of the complex,\n",
@@ -1499,7 +1499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
