--- a/rnapoliii/deposition/.template.Deposition.ipynb
+++ b/rnapoliii/deposition/.template.Deposition.ipynb
@@ -102,23 +102,26 @@
     "import IMP.pmi.restraints.crosslinking\n",
     "import IMP.pmi.restraints.stereochemistry\n",
     "import IMP.pmi.tools\n",
-    "import IMP.pmi.samplers\n",
-    "import RMF\n",
-    "import IMP.rmf\n",
     "\n",
     "import IMP.pmi.macros\n",
     "import IMP.pmi.topology\n",
+    "\n",
+    "# Hot fixes correcting minor bugs in IMP 2.17.0\n",
     "import tutorial_util\n",
     "\n",
+    "import os\n",
     "import sys\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
+    "cryoEM=True\n",
     "\n",
-    "# Then setup the relevant paths of the input files\n",
+    "if cryoEM:\n",
+    "    step=1\n",
+    "    import IMP.bayesianem\n",
+    "    import IMP.bayesianem.restraint\n",
     "\n",
-    "# In[2]:\n",
     "try:\n",
     "    import IMP.mpi\n",
     "    print('ReplicaExchange: MPI was found. Using Parallel Replica Exchange')\n",
@@ -129,30 +132,23 @@
     "\n",
     "replica_number = rex_obj.get_my_index()\n",
     "\n",
-    "\n",
-    "output_prefix=\"\"\n",
-    "step=int(1)\n",
-    "\n",
     "datadirectory = \"../data/\"\n",
-    "topology_file = datadirectory+\"topology_poliii.cryoem.txt\"\n",
-    "target_gmm_file=datadirectory+'%d_imp.gmm'%(step)\n",
-    "output_dir='.'\n",
-    "output_directory='%s/%s_output_%d/'%(output_dir,output_prefix, step)\n",
+    "output_directory = \"./output\"\n",
     "\n",
-    "\n",
-    "\n",
+    "if not cryoEM:\n",
+    "    topology_file = datadirectory+\"topology_poliii.txt\" \n",
+    "else:\n",
+    "    topology_file = datadirectory+\"topology_poliii.cryoem.txt\"\n",
+    "    \n",
     "# Initialize IMP model\n",
     "m = IMP.Model()\n",
     "\n",
     "# Read in the topology file.  \n",
-    "# Specify the directory wheere the PDB files, fasta files and GMM files are\n",
-    "topology = IMP.pmi.topology.TopologyReader(topology_file,\n",
-    "                                  pdb_dir=datadirectory,\n",
-    "                                  fasta_dir=datadirectory,\n",
+    "# Specify the directory where the PDB files, FASTA files and GMM files are\n",
+    "topology = IMP.pmi.topology.TopologyReader(topology_file, \n",
+    "                                  pdb_dir=datadirectory, \n",
+    "                                  fasta_dir=datadirectory, \n",
     "                                  gmm_dir=datadirectory)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# Use the BuildSystem macro to build states from the topology file\n",
     "bs = IMP.pmi.macros.BuildSystem(m)"
@@ -197,56 +193,45 @@
     "# Each state can be specified by a topology file.\n",
     "bs.add_state(topology)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "root_hier, dof = bs.execute_macro(max_rb_trans=4.0,\n",
     "                                  max_rb_rot=0.3,\n",
     "                                  max_bead_trans=4.0,\n",
     "                                  max_srb_trans=4.0,\n",
     "                                  max_srb_rot=0.3)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "import IMP.pmi.plotting\n",
     "import IMP.pmi.plotting.topology\n",
     "\n",
     "IMP.pmi.plotting.topology.draw_component_composition(dof)\n",
     "\n",
-    "fixed_particles=[]\n",
-    "for prot in [\"ABC23\"]:\n",
-    "    fixed_particles+=IMP.atom.Selection(root_hier,molecule=prot).get_selected_particles()\n",
+    "# Shuffle the rigid body and beads configuration for all molecules\n",
     "\n",
-    "\n",
-    "# Fix the Corresponding Rigid movers and Super Rigid Body movers using dof\n",
-    "# The flexible beads will still be flexible (fixed_beads is an empty list)!\n",
-    "fixed_beads,fixed_rbs=dof.disable_movers(fixed_particles,\n",
-    "                                         [IMP.core.RigidBodyMover,IMP.pmi.TransformMover])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "if step==1:\n",
-    "    # Shuffle the rigid body configuration of only the molecules we are interested in (Rpb4 and Rpb7)\n",
-    "    # but all flexible beads will also be shuffled.\n",
+    "# if you use XL only \n",
+    "if not cryoEM:\n",
     "    IMP.pmi.tools.shuffle_configuration(root_hier,\n",
+    "                                        max_translation=50, \n",
+    "                                        verbose=False,\n",
+    "                                        cutoff=5.0,\n",
+    "                                        niterations=100)\n",
+    "\n",
+    "# otherwise you radomize only if you start a new cryoEM-XL modeling\n",
+    "else:\n",
+    "    if step==1:\n",
+    "        # Shuffle the rigid body configuration of only the molecules we are interested in (Rpb4 and Rpb7)\n",
+    "        # but all flexible beads will also be shuffled.\n",
+    "        IMP.pmi.tools.shuffle_configuration(root_hier,\n",
     "                                        max_translation=300,\n",
     "                                        verbose=True,\n",
     "                                        cutoff=5.0,\n",
     "                                        niterations=100)\n",
     "                                        #excluded_rigid_bodies=fixed_rbs,\n",
     "\n",
-    "\n",
-    "else:\n",
-    "    rh_ref = RMF.open_rmf_file_read_only('seed_%d.rmf3'%(step-1))\n",
-    "    IMP.rmf.link_hierarchies(rh_ref, [root_hier])\n",
-    "    IMP.rmf.load_frame(rh_ref, RMF.FrameID(replica_number))\n",
-    "\n",
+    "    else:\n",
+    "        rh_ref = RMF.open_rmf_file_read_only('seed_%d.rmf3'%(step-1))\n",
+    "        IMP.rmf.link_hierarchies(rh_ref, [root_hier])\n",
+    "        IMP.rmf.load_frame(rh_ref, RMF.FrameID(replica_number))\n",
+    "        \n",
     "outputobjects = [] # reporter objects...output is included in the stat file\n",
-    "\n",
-    "\n",
     "\n",
     "# Connectivity keeps things connected along the backbone (ignores if inside same rigid body)\n",
     "mols = IMP.pmi.tools.get_molecules(root_hier)\n",
@@ -258,22 +243,11 @@
     "    cr.set_label(molname)\n",
     "    outputobjects.append(cr)\n",
     "\n",
-    "\n",
-    "# #### Excluded Volume Restraint <a name=\"Excluded_Volume_Restraint_4\"></a>\n",
-    "\n",
-    "# In[12]:\n",
-    "\n",
-    "\n",
     "ev = IMP.pmi.restraints.stereochemistry.ExcludedVolumeSphere(\n",
     "                                         included_objects=root_hier,\n",
     "                                         resolution=10)\n",
     "ev.add_to_model()         # add to scoring function\n",
     "outputobjects.append(ev)  # add to output\n",
-    "\n",
-    "\n",
-    "# #### Crosslinks - dataset 1 <a name=\"Crosslink_1_4\"></a>\n",
-    "# \n",
-    "\n",
     "\n",
     "# We then initialize a CrossLinkDataBase that uses a keywords converter to map column to information.\n",
     "# The required fields are the protein and residue number for each side of the crosslink.\n",
@@ -295,48 +269,43 @@
     "# Append the xl2 dataset to the xl1 dataset to create a larger dataset\n",
     "xl1.append_database(xl2)\n",
     "\n",
-    "# Rename one protien name\n",
+    "# Rename one protein name\n",
     "xl1.rename_proteins({\"ABC14.5\":\"ABC14_5\"})\n",
     "\n",
     "# Create 3 confidence classes\n",
     "xl1.classify_crosslinks_by_score(3)\n",
-    "\n",
-    "\n",
     "\n",
     "# Now, we set up the restraint.\n",
     "xl1rest = IMP.pmi.restraints.crosslinking.CrossLinkingMassSpectrometryRestraint(\n",
     "                                   root_hier=root_hier,  # The root hierarchy\n",
     "                                   database=xl1,# The XLDB defined above\n",
     "                                   length=21.0,          # Length of the linker in angstroms\n",
-    "                                   slope=0.002,           # A linear term that biases XLed\n",
+    "                                   slope=0.002,          # A linear term that biases XLed\n",
     "                                                         # residues together\n",
     "                                   resolution=1.0,       # Resolution at which to apply the restraint. \n",
     "                                                         # Either 1 (residue) or 0 (atomic)\n",
-    "                                   label=\"XL\",         # Used to label output in the stat file\n",
-    "                                   weight=10.)            # Weight applied to all crosslinks \n",
+    "                                   label=\"XL\",           # Used to label output in the stat file\n",
+    "                                   weight=10.)           # Weight applied to all crosslinks \n",
     "                                                         # in this dataset\n",
     "xl1rest.add_to_model()\n",
     "outputobjects.append(xl1rest)\n",
     "\n",
-    "# Electron Microscopy Restraint\n",
-    "#  The GaussianEMRestraint uses a density overlap function to compare model to data\n",
-    "#   First the EM map is approximated with a Gaussian Mixture Model (done separately)\n",
-    "#   Second, the components of the model are represented with Gaussians (forming the model GMM)\n",
-    "\n",
-    "import IMP.bayesianem\n",
-    "import IMP.bayesianem.restraint\n",
     "# First, get the model density objects that will be fitted to the EM density.\n",
-    "densities = IMP.atom.Selection(root_hier, representation_type=IMP.atom.DENSITIES).get_selected_particles()\n",
-    "gem = IMP.bayesianem.restraint.GaussianEMRestraintWrapper(densities,\n",
+    "\n",
+    "if cryoEM:\n",
+    "    target_gmm_file=datadirectory+'%d_imp.gmm'%(step)\n",
+    "    # First, get the model density objects that will be fitted to the EM density.\n",
+    "    densities = IMP.atom.Selection(root_hier, representation_type=IMP.atom.DENSITIES).get_selected_particles()\n",
+    "    gem = IMP.bayesianem.restraint.GaussianEMRestraintWrapper(densities,\n",
     "                                                 target_fn=target_gmm_file,\n",
     "                                                 scale_target_to_mass=True,\n",
     "                                                 slope=0.01,\n",
     "                                                 target_radii_scale=3.0,\n",
     "                                                 target_is_rigid_body=False)\n",
     "\n",
-    "gem.add_to_model()\n",
-    "gem.set_label(\"Total\")\n",
-    "outputobjects.append(gem)"
+    "    gem.add_to_model()\n",
+    "    gem.set_label(\"Total\")\n",
+    "    outputobjects.append(gem)"
    ]
   },
   {
@@ -353,21 +322,22 @@
    "outputs": [],
    "source": [
     "# total number of saved frames\n",
-    "num_frames = 2\n",
+    "num_frames = 5\n",
     "\n",
     "# This object defines all components to be sampled as well as the sampling protocol\n",
     "mc1=IMP.pmi.macros.ReplicaExchange0(m,\n",
     "              root_hier=root_hier,                         # The root hierarchy\n",
     "              monte_carlo_sample_objects=dof.get_movers()+xl1rest.get_movers(), # All moving particles and parameters\n",
+    "              output_objects=outputobjects,                # Objects to put into the stat file\n",
     "              rmf_output_objects=outputobjects,            # Objects to put into the rmf file\n",
-    "              monte_carlo_temperature=1.0,\n",
+    "              monte_carlo_temperature=1.0,   \n",
     "              replica_exchange_minimum_temperature=1.0,\n",
-    "              replica_exchange_maximum_temperature=2.5,\n",
+    "              replica_exchange_maximum_temperature=2.5,              \n",
     "              simulated_annealing=False,\n",
     "              number_of_best_scoring_models=0,\n",
     "              monte_carlo_steps=10,\n",
     "              number_of_frames=num_frames,\n",
-    "              #save_coordinates_mode=\"25th_score\",\n",
+    "              save_coordinates_mode=\"25th_score\",\n",
     "              global_output_directory=output_directory,\n",
     "              test_mode=True)\n",
     "\n",
@@ -1057,7 +1027,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1071,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
