--- a/rnapoliii/deposition/.template.Deposition.ipynb
+++ b/rnapoliii/deposition/.template.Deposition.ipynb
@@ -337,7 +337,6 @@
     "              number_of_best_scoring_models=0,\n",
     "              monte_carlo_steps=10,\n",
     "              number_of_frames=num_frames,\n",
-    "              save_coordinates_mode=\"25th_score\",\n",
     "              global_output_directory=output_directory,\n",
     "              test_mode=True)\n",
     "\n",
@@ -433,16 +432,17 @@
     "_software.version\n",
     "_software.type\n",
     "_software.location\n",
+    "_software.citation_id\n",
     "1 'IMP PMI module' 'integrative model building' 'integrative model building'\n",
-    "2.11.1 program https://integrativemodeling.org\n",
+    "2.17.0 program https://integrativemodeling.org 2\n",
     "2 'Integrative Modeling Platform (IMP)' 'integrative model building'\n",
-    "'integrative model building' 2.11.1 program https://integrativemodeling.org\n",
+    "'integrative model building' 2.17.0 program https://integrativemodeling.org 3\n",
     "3 MODELLER 'comparative modeling'\n",
     "'Comparative modeling by satisfaction of spatial restraints, build 2013/11/13 18:10:39'\n",
-    "9.10 program https://salilab.org/modeller/\n",
+    "9.10 program https://salilab.org/modeller/ 4\n",
     "4 MODELLER 'comparative modeling'\n",
     "'Comparative modeling by satisfaction of spatial restraints, build 2013/11/15 19:51:28'\n",
-    "9.12 program https://salilab.org/modeller/\n",
+    "9.12 program https://salilab.org/modeller/ 4\n",
     "```\n",
     "\n",
     "Missing data are represented by `?` if they are unknown or `.` if they are deliberately omitted (for example if they don't make sense here).\n",
@@ -581,7 +581,7 @@
    "source": [
     "## Correct number of output models {#fixnummodel}\n",
     "\n",
-    "ProtocolOutput captures information on the actual sampling, storing it in ``ihm.protocol.Step`` objects. Here it correctly notes that we ran Monte Carlo to generate 2 frames:"
+    "ProtocolOutput captures information on the actual sampling, storing it in ``ihm.protocol.Step`` objects. Here it correctly notes that we ran Monte Carlo to generate 5 frames:"
    ]
   },
   {
@@ -715,6 +715,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import RMF\n",
+    "\n",
     "# Make DCD of all models in cluster\n",
     "dcd_filename = '../analysis/cluster.0/allmodels.dcd'\n",
     "num_models = 0\n",
