Don't use deprecated ReplicaExchange0 class

--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -922,7 +922,7 @@
    "source": [
     "## Stage 3 - Sampling <a name=\"Sampling_2\"></a>\n",
     "\n",
-    "With the system representation built and data restraints entered, the system is now ready to sample configurations. A replica exchange run can be set up using the [ReplicaExchange0](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1pmi_1_1macros_1_1ReplicaExchange0.html) macro. (Follow that link for a full description of all of the input parameters.)\n",
+    "With the system representation built and data restraints entered, the system is now ready to sample configurations. A replica exchange run can be set up using the [ReplicaExchange](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1pmi_1_1macros_1_1ReplicaExchange.html) macro. (Follow that link for a full description of all of the input parameters.)\n",
     "\n",
     "Replica exchange greatly improves the sampling (see [wikipedia](https://en.wikipedia.org/wiki/Parallel_tempering) for a superficial description).\n",
     "\n",
@@ -943,7 +943,7 @@
     "num_frames = 5\n",
     "\n",
     "# This object defines all components to be sampled as well as the sampling protocol\n",
-    "mc1=IMP.pmi.macros.ReplicaExchange0(m,\n",
+    "mc1=IMP.pmi.macros.ReplicaExchange(m,\n",
     "              root_hier=root_hier,                         # The root hierarchy\n",
     "              monte_carlo_sample_objects=dof.get_movers()+xl1rest.get_movers(), # All moving particles and parameters\n",
     "              output_objects=outputobjects,                # Objects to put into the stat file\n",
